# claude-talk

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml
ClaudeTalk/: .gitignore  ClaudeTalk-Bridging-Header.h  build-release.sh  build.sh  package-dmg.sh  project.yml
ClaudeTalk/ClaudeTalk/App/: AppDelegate.swift  AppIcon.icns  Info.plist  main.swift
ClaudeTalk/ClaudeTalk/Assets.xcassets/: Contents.json
ClaudeTalk/ClaudeTalk/Audio/: AudioEngine.swift
ClaudeTalk/ClaudeTalk/Input/: HotkeyManager.swift  InputSimulator.swift  TerminalDetector.swift
ClaudeTalk/ClaudeTalk/Orchestrator/: RecordingOrchestrator.swift
ClaudeTalk/ClaudeTalk/Processing/: LLMService.swift  PostProcessor.swift
ClaudeTalk/ClaudeTalk/Settings/: Settings.swift
ClaudeTalk/ClaudeTalk/Transcription/: ModelManager.swift  TranscriptionService.swift  WhisperWrapper.swift  transcribe_server.py
ClaudeTalk/ClaudeTalk/UI/: CharacterView.swift  MenuBarController.swift  NotchContentView.swift  NotchOverlay.swift  OnboardingWindow.swift  RecordingPillModel.swift  RecordingPillView.swift  WaveformView.swift
ClaudeTalk/ClaudeTalkTests/: ClaudeTalkTests.swift  ModelManagerTests.swift  PostProcessorTests.swift  SettingsTests.swift  TerminalDetectorTests.swift
ClaudeTalk/ci/: README.md  analyze.sh  ci.sh  smoke.sh
docs/superpowers/plans/: 2026-03-15-swift-rewrite.md  2026-04-09-llm-polish.md
docs/superpowers/specs/: 2026-03-15-notch-ui-swift-rewrite-design.md  2026-04-09-llm-polish-design.md
src/claude_talk/: __init__.py  __main__.py
(+2 files in other folders)
